# commented-configparser

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: pypi-publish.yml  pypi-test-publish.yml  python-tests.yml
requirements/: constraints.txt  requirements-dev.txt  requirements-test.txt  requirements.txt
src/commentedconfigparser/: __init__.py  commentedconfigparser.py
tests/: commentconfig_test.py  commentedconfigparser_test.py  empty_comments_expected.ini  empty_comments_input.ini  expected.ini  header_expected.ini  header_input.ini  multi01_input.ini  multi02_input.ini  multi_expected.ini  nocomments.ini  pydocs_expected.ini  pydocs_input.ini  regression_original_expected.ini  regression_original_input.ini  withcomments-nonewline.ini  withcomments.ini
