[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "commented-configparser"
version = "1.0.0"
requires-python = ">=3.8"
description = "Custom ConfigParser class that preserves comments in file when writing"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { email = "preocts@preocts.com", name = "Preocts" }
]
maintainers = []
keywords = []
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython"
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
    "mypy",
    "flake8",
    "flake8-builtins",
    "flake8-pep585",
]
test = [
    "pytest",
    "pytest-randomly",
    "coverage",
    "nox"
]

[project.urls]
homepage = "https://github.com/Preocts/commented-configparser"

[tool.setuptools.package-data]
"commentedconfigparser" = ["py.typed"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_incomplete_defs = false
disallow_untyped_defs = false

[tool.coverage.run]
branch = true
source = [
    "tests",
]
source_pkgs = [
    "commentedconfigparser",
]

[tool.coverage.paths]
source = [
    "src/",
    "*/site-packages",
]
test = [
    "tests/",
    "*/tests",
]

[tool.coverage.report]
exclude_lines =[
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
